PSL-0003 adding data file paths

--- a/ChurnPrediction.ipynb
+++ b/ChurnPrediction.ipynb
@@ -324,7 +324,7 @@
     "import pandas as pd\n",
     "\n",
     "# import the dataset (train file)\n",
-    "data = pd.read_csv(\"\")\n",
+    "data = pd.read_csv(\"https://raw.githubusercontent.com/nagraj98/Telecom-Churn-Prediction/master/Telecom-Churn-Data/Churn_train.csv\")\n",
     "print(\"Data Shape : \", data.shape)\n",
     "data.head()"
    ]
@@ -2685,7 +2685,7 @@
    ],
    "source": [
     "# importing the test data\n",
-    "live_data = pd.read_csv(\"\")\n",
+    "live_data = pd.read_csv(\"https://raw.githubusercontent.com/nagraj98/Telecom-Churn-Prediction/master/Telecom-Churn-Data/Churn_test.csv\")\n",
     "live_data.head()"
    ]
   },
@@ -2779,7 +2779,7 @@
    "source": [
     "# exporting it as a csv file\n",
     "# using header=False and index=False to exclude the Column headers and the Row indexes respectively from the file.\n",
-    "result_df.to_csv(path_or_buf=\"\", index=False, header=False)"
+    "result_df.to_csv(path_or_buf=\"submission.csv\", index=False, header=False)"
    ]
   }
  ],
