--- a/ChurnPredictionDraftAndExploration.ipynb
+++ b/ChurnPredictionDraftAndExploration.ipynb
@@ -361,7 +361,7 @@
     "import pandas as pd\n",
     "\n",
     "# import the dataset (train file)\n",
-    "train_data = pd.read_csv(\"\")\n",
+    "train_data = pd.read_csv(\"https://raw.githubusercontent.com/nagraj98/Telecom-Churn-Prediction/master/Telecom-Churn-Data/Churn_train.csv\")\n",
     "print(\"Data Shape : \", train_data.shape)\n",
     "train_data.head()"
    ]
