precision, recall, roc, and decision tree

--- a/ChurnPredictionDraftAndExploration.ipynb
+++ b/ChurnPredictionDraftAndExploration.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### Company Introduction\n",
     "\n",
-    "Your client for this project is a Telecom Service Provider.\n",
+    "Client for this project is a Telecom Service Provider.\n",
     "\n",
     "- The company has started facing high churn rate due to rapid development in technology and the emerging new competitors in the market.\n",
     "- The objective is to use the model to take further actions for preventing customers to churn.\n",
@@ -45,23 +45,12 @@
     "\n",
     "In return, they have decided to find a more optimal way and hired a team of data scientists to solve this problem.\n",
     "\n",
-    "### Your Role\n",
+    "### Our Role\n",
     "\n",
-    "- You are given datasets of past customers and their status (Churn: Yes or No).\n",
-    "- Your task is to build a classification model using the dataset.\n",
-    "- Because there was no machine learning model for this problem in the company, you don’t have a quantifiable win condition. You - need to build the best possible model.\n",
-    "\n",
-    "### Project Deliverables\n",
-    "\n",
+    "- We are given datasets of past customers and their status (Churn: Yes or No).\n",
     "- Deliverable: Predict whether a customer will churn or not..\n",
     "- Machine Learning Task: Classification\n",
-    "- Target Variable: Churn (Yes / No)\n",
-    "- Win Condition: N/A (best possible model)\n",
-    "\n",
-    "### Evaluation Metric\n",
-    "\n",
-    "- The model evaluation will be based on the Accuracy Score.\n",
-    "- To learn more about Accuracy Score and it’s Python implementation, please visit this link."
+    "- Target Variable: Churn (Yes / No)"
    ]
   },
   {
@@ -75,9 +64,7 @@
     "\n",
     "Also included in the dataset is the column Churn which classifies whether the customer will churn or not.\n",
     "\n",
-    "This is the data that we have to predict for the future customers.\n",
-    "\n",
-    "The dataset is divided into two parts: Train and Test sets.\n",
+    "The dataset is divided into Train and Test sets.\n",
     "\n",
     "#### Train Set:\n",
     "- The train set contains 5634 rows and 21 columns.\n",
@@ -85,8 +72,7 @@
     "\n",
     "#### Test Set:\n",
     "- The test set contains 1409 rows and 20 columns.\n",
-    "- The test set doesn’t contain the Churn column.\n",
-    "- It needs to be predicted for the test set.\n",
+    "- The test set doesn’t contain the Churn column, and it needs to be predicted.\n",
     "\n",
     "### Dataset Feature Description\n",
     "The Dataset contains the following columns:\n",
@@ -118,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "671936e1",
    "metadata": {},
    "outputs": [],
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "59258b43",
    "metadata": {
     "scrolled": false
@@ -351,7 +337,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,6 +348,7 @@
     "\n",
     "# import the dataset (train file)\n",
     "train_data = pd.read_csv(\"https://raw.githubusercontent.com/nagraj98/Telecom-Churn-Prediction/master/Telecom-Churn-Data/Churn_train.csv\")\n",
+    "\n",
     "print(\"Data Shape : \", train_data.shape)\n",
     "train_data.head()"
    ]
